<resources>
    <string name="app_name">Pokedex</string>
    <string name="contains">Contains</string>
    <string name="ability_pokemon">Ability of All Pokemon</string>
    <string name="generation_pokemon">Generation of All Pokemon</string>
    <string name="move_pokemon">Move of All Pokemon</string>
    <string name="pokedex_pokemon">Pokedex of All Pokemon</string>
    <string name="pokemon_species_pokemon">Pokemon Species of All Pokemon</string>
    <string name="region_pokemon">Region of All Pokemon</string>
    <string name="stat_pokemon">Stat of All Pokemon</string>
    <string name="type_pokemon">Type of All Pokemon</string>
    <string name="favorite_pokemon">Favorite Pokemon</string>
    <string name="ability">Ability</string>
    <string name="generation">Generation</string>
    <string name="move">Move</string>
    <string name="pokedex">Pokedex</string>
    <string name="species">Species</string>
    <string name="regions">Regions</string>
    <string name="stat">Stat</string>
    <string name="type">Type</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="pokemon">Pokemon</string>
    <string name="share_favourite_pokemon">My Favourite Pokemon is %1$s.</string>
    <string name="share_favourite_ability">My Favourite Ability is %1$s.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="noDataPresent">There is no data present.</string>
    <string name="icon">Icon</string>
    <string name="base_happiness">Base happiness</string>
    <string name="capture_rate">Capture Rate</string>
    <string name="color">Color</string>
    <string name="egg_groups">Egg Groups</string>
    <string name="growth_rates">Growth Rates</string>
    <string name="hatch_counter">Hatch Counter</string>
    <string name="shape">Shape</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="special_attack">Special-Attack</string>
    <string name="special_defense">Special-Defense</string>
    <string name="speed">Speed</string>
    <string name="total">Total</string>
    <string name="pokemon_icon">Pokemon Icon</string>
    <string name="add_favorite_pokemon">Add Favorite Pokemon</string>
    <string name="search">Search</string>
    <string name="pokemonCap">POKEMON</string>
    <string name="abilityCap">ABILITY</string>
    <string name="generationCap">GENERATION</string>
    <string name="moveCap">MOVE</string>
    <string name="pokedexCap">POKEDEX</string>
    <string name="speciesCap">SPECIES</string>
    <string name="regionsCap">REGIONS</string>
    <string name="statCap">STAT</string>
    <string name="typeCap">TYPE</string>
    <string name="favoriteCap">FAVORITE</string>
    <string name="layout_change">Layout Change</string>
    <string name="noPokemonFound">No Pokemon Found... \n Try a different name, number or Type.</string>
    <string name="noFavPresent">You did not mark any Pokemon as Favorite... \n Mark a Pokemon as favorite by tapping the love icon in the inside on Pokemon Detail</string>
    <string name="change_in_list">Change in List</string>
    <string name="change_in_grid">Change in Grid</string>
    <string name="delete_all">Delete All</string>
    <string name="noAbilitiesFoundText">No abilities found... \n Try a different name.</string>
</resources>