<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/pokemonOverviewFragment"
        android:icon="@drawable/pokemon"
        android:title="Pokemon"/>

    <item
        android:id="@+id/abilityOverviewFragment"
        android:icon="@drawable/ability1"
        android:title="@string/ability" />

    <item
        android:id="@+id/generationOverviewFragment"
        android:icon="@drawable/generation1"
        android:title="@string/generation" />

    <item
        android:id="@+id/moveOverviewFragment"
        android:icon="@drawable/move1"
        android:title="@string/move" />

    <item
        android:id="@+id/pokedexOverviewFragment"
        android:icon="@drawable/pokedex2"
        android:title="@string/pokedex" />

    <item
        android:id="@+id/pokemonSpeciesOverviewFragment"
        android:icon="@drawable/species1"
        android:title="@string/species" />

    <item
        android:id="@+id/regionsOverviewFragment"
        android:icon="@drawable/region1"
        android:title="@string/regions" />

    <item
        android:id="@+id/statOverviewFragment"
        android:icon="@drawable/stat1"
        android:title="@string/stat" />

    <item
        android:id="@+id/typeOverviewFragment"
        android:icon="@drawable/type1"
        android:title="@string/type" />

    <item
        android:id="@+id/favoriteOverviewFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite" />


</menu>