<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black">

                <androidx.cardview.widget.CardView
                    android:id="@+id/pokemonCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemonCap"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="50sp"
                        android:background="@color/LightBlue"
                        android:textColor="@color/black"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/abilityCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/pokemonCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/abilityCap"
                        android:textAlignment="center"
                        android:textSize="50sp"
                        android:background="@color/LightBlue"
                        android:textColor="@color/black"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/generationCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/abilityCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/LightBlue"
                        android:text="@string/generationCap"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="50sp"
                        tools:ignore="TextSizeCheck" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/moveCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/generationCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/moveCap"
                        android:textAlignment="center"
                        android:textSize="50sp"
                        android:background="@color/LightBlue"
                        android:textColor="@color/black"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/pokedexCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/moveCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pokedexCap"
                        android:textAlignment="center"
                        android:textSize="50sp"
                        android:background="@color/LightBlue"
                        android:textColor="@color/black"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/pokemonSpeciesCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/pokedexCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/speciesCap"
                        android:textAlignment="center"
                        android:textSize="50sp"
                        android:background="@color/LightBlue"
                        android:textColor="@color/black"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/regionsCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/pokemonSpeciesCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/regionsCap"
                        android:textAlignment="center"
                        android:textSize="50sp"
                        android:background="@color/LightBlue"
                        android:textColor="@color/black"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/statCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/regionsCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/statCap"
                        android:textAlignment="center"
                        android:textSize="50sp"
                        android:background="@color/LightBlue"
                        android:textColor="@color/black"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/typeCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/statCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/typeCap"
                        android:textAlignment="center"
                        android:textSize="50sp"
                        android:background="@color/LightBlue"
                        android:textColor="@color/black"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/favoriteCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/typeCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/favoriteCap"
                        android:textAlignment="center"
                        android:textSize="50sp"
                        android:background="@color/LightBlue"
                        android:textColor="@color/black"/>

                </androidx.cardview.widget.CardView>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>